--- a/UpSchool.BusinessLayer/UpSchool.BusinessLayer.csproj
+++ b/UpSchool.BusinessLayer/UpSchool.BusinessLayer.csproj
@@ -9,4 +9,12 @@
     <ProjectReference Include="..\UpSchool.EntityLayer\UpSchool.EntityLayer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Abstract\" />
+    <Folder Include="Concrete\" />
+    <Folder Include="DLContainer\" />
+    <Folder Include="Logging\" />
+    <Folder Include="ValidationRules\" />
+  </ItemGroup>
+
 </Project>
