--- a/UpSchool.DataAccessLayer/UpSchool.DataAccessLayer.csproj
+++ b/UpSchool.DataAccessLayer/UpSchool.DataAccessLayer.csproj
@@ -5,15 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Abstract\**" />
     <Compile Remove="EntityFramework\**" />
     <Compile Remove="Pages\**" />
     <Compile Remove="Repository\**" />
-    <EmbeddedResource Remove="Abstract\**" />
     <EmbeddedResource Remove="EntityFramework\**" />
     <EmbeddedResource Remove="Pages\**" />
     <EmbeddedResource Remove="Repository\**" />
-    <None Remove="Abstract\**" />
     <None Remove="EntityFramework\**" />
     <None Remove="Pages\**" />
     <None Remove="Repository\**" />
@@ -34,6 +31,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\UpSchool.EntityLayer\UpSchool.EntityLayer.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Abstract\" />
   </ItemGroup>
 
 </Project>
