--- a/UpSchool.DataAccessLayer/UpSchool.DataAccessLayer.csproj
+++ b/UpSchool.DataAccessLayer/UpSchool.DataAccessLayer.csproj
@@ -35,7 +35,7 @@
 
   <ItemGroup>
     <Folder Include="Abstract\" />
-    <Folder Include="klasör\" />
+    <Folder Include="Klasör\" />
   </ItemGroup>
 
 </Project>
