--- a/UpSchool.DataAccessLayer/UpSchool.DataAccessLayer.csproj
+++ b/UpSchool.DataAccessLayer/UpSchool.DataAccessLayer.csproj
@@ -5,13 +5,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Abstract\**" />
     <Compile Remove="EntityFramework\**" />
+    <Compile Remove="Klasör\**" />
     <Compile Remove="Pages\**" />
     <Compile Remove="Repository\**" />
+    <EmbeddedResource Remove="Abstract\**" />
     <EmbeddedResource Remove="EntityFramework\**" />
+    <EmbeddedResource Remove="Klasör\**" />
     <EmbeddedResource Remove="Pages\**" />
     <EmbeddedResource Remove="Repository\**" />
+    <None Remove="Abstract\**" />
     <None Remove="EntityFramework\**" />
+    <None Remove="Klasör\**" />
     <None Remove="Pages\**" />
     <None Remove="Repository\**" />
   </ItemGroup>
@@ -31,11 +37,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\UpSchool.EntityLayer\UpSchool.EntityLayer.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Abstract\" />
-    <Folder Include="Klasör\" />
   </ItemGroup>
 
 </Project>
