--- a/UpSchool.DataAccessLayer/UpSchool - Backup.DataAccessLayer.csproj
+++ b/UpSchool.DataAccessLayer/UpSchool - Backup.DataAccessLayer.csproj
@@ -5,14 +5,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Abstract\**" />
     <Compile Remove="EntityFramework\**" />
     <Compile Remove="Klasör\**" />
     <Compile Remove="Pages\**" />
     <Compile Remove="Repository\**" />
+    <EmbeddedResource Remove="Abstract\**" />
     <EmbeddedResource Remove="EntityFramework\**" />
     <EmbeddedResource Remove="Klasör\**" />
     <EmbeddedResource Remove="Pages\**" />
     <EmbeddedResource Remove="Repository\**" />
+    <None Remove="Abstract\**" />
     <None Remove="EntityFramework\**" />
     <None Remove="Klasör\**" />
     <None Remove="Pages\**" />
