--- a/UpSchool.BusinessLayer/UpSchool.BusinessLayer.csproj
+++ b/UpSchool.BusinessLayer/UpSchool.BusinessLayer.csproj
@@ -5,26 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Abstract\**" />
-    <Compile Remove="Concrete\**" />
-    <Compile Remove="DLContainer\**" />
-    <Compile Remove="Logging\**" />
-    <Compile Remove="ValidationRules\**" />
-    <EmbeddedResource Remove="Abstract\**" />
-    <EmbeddedResource Remove="Concrete\**" />
-    <EmbeddedResource Remove="DLContainer\**" />
-    <EmbeddedResource Remove="Logging\**" />
-    <EmbeddedResource Remove="ValidationRules\**" />
-    <None Remove="Abstract\**" />
-    <None Remove="Concrete\**" />
-    <None Remove="DLContainer\**" />
-    <None Remove="Logging\**" />
-    <None Remove="ValidationRules\**" />
+    <ProjectReference Include="..\UpSchool.DataAccessLayer\UpSchool.DataAccessLayer.csproj" />
+    <ProjectReference Include="..\UpSchool.EntityLayer\UpSchool.EntityLayer.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\UpSchool.DataAccessLayer\UpSchool.DataAccessLayer.csproj" />
-    <ProjectReference Include="..\UpSchool.EntityLayer\UpSchool.EntityLayer.csproj" />
+    <Folder Include="DLContainer\" />
+    <Folder Include="Logging\" />
+    <Folder Include="ValidationRules\" />
   </ItemGroup>
 
 </Project>
