--- a/UpSchool.BusinessLayer/UpSchool.BusinessLayer.csproj
+++ b/UpSchool.BusinessLayer/UpSchool.BusinessLayer.csproj
@@ -12,7 +12,10 @@
   <ItemGroup>
     <Folder Include="DLContainer\" />
     <Folder Include="Logging\" />
-    <Folder Include="ValidationRules\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="7.5.2" />
   </ItemGroup>
 
 </Project>
