--- a/UpSchool_.NETCore/UpSchool_.NETCore.csproj
+++ b/UpSchool_.NETCore/UpSchool_.NETCore.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\Employee\Data\" />
     <Folder Include="wwwroot\UserImages\" />
   </ItemGroup>
 
