--- a/UpSchool_.NETCore/UpSchool_.NETCore.csproj
+++ b/UpSchool_.NETCore/UpSchool_.NETCore.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.97.0" />
     <PackageReference Include="EPPlus.Core" Version="1.5.4" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="10.4.0" />
     <PackageReference Include="iTextSharp.LGPLv2.Core" Version="1.9.3" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.9" />
