--- a/UpSchool_.NETCore/UpSchool_.NETCore.csproj
+++ b/UpSchool_.NETCore/UpSchool_.NETCore.csproj
@@ -19,9 +19,12 @@
     <ProjectReference Include="..\UpSchool.BusinessLayer\UpSchool.BusinessLayer.csproj" />
     <ProjectReference Include="..\UpSchool.DataAccessLayer\UpSchool.DataAccessLayer.csproj" />
     <ProjectReference Include="..\UpSchool.EntityLayer\UpSchool.EntityLayer.csproj" />
+    <ProjectReference Include="..\UpSchool_.NETCore.DTOLayer\UpSchool_.NETCore.DTOLayer.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Areas\Employee\Data\" />
     <Folder Include="wwwroot\UserImages\" />
   </ItemGroup>
